etc/argocd/agrocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip 
    srvice.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  finalizers:
  - ingress.k8s.aws/resources
  labels:
    app: anycompany-agrocd
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
